
add_executable(yolo5_cls_dnn "yolo5_cls_dnn.cpp")
target_link_libraries(yolo5_cls_dnn ${PROJECT_NAME})

add_executable(yolo5_det_dnn "yolo5_det_dnn.cpp")
target_link_libraries(yolo5_det_dnn ${PROJECT_NAME})

add_executable(yolo5_det_dnn2 "yolo5_det_dnn2.cpp")
target_link_libraries(yolo5_det_dnn2 ${PROJECT_NAME})

add_executable(yolo5_det_ovn "yolo5_det_ovn.cpp")
target_link_libraries(yolo5_det_ovn ${PROJECT_NAME})

add_executable(yolo5_seg_dnn "yolo5_seg_dnn.cpp")
target_link_libraries(yolo5_seg_dnn ${PROJECT_NAME})

add_executable(yolo5_seg_dnn2 "yolo5_seg_dnn2.cpp")
target_link_libraries(yolo5_seg_dnn2 ${PROJECT_NAME})

add_executable(yolo5u_det_dnn "yolo5u_det_dnn.cpp")
target_link_libraries(yolo5u_det_dnn ${PROJECT_NAME})

add_executable(yolo8_cls_dnn "yolo8_cls_dnn.cpp")
target_link_libraries(yolo8_cls_dnn ${PROJECT_NAME})

add_executable(yolo8_cls_dnn2 "yolo8_cls_dnn2.cpp")
target_link_libraries(yolo8_cls_dnn2 ${PROJECT_NAME})

add_executable(yolo8_det_dnn "yolo8_det_dnn.cpp")
target_link_libraries(yolo8_det_dnn ${PROJECT_NAME})

add_executable(yolo8_det_dnn2 "yolo8_det_dnn2.cpp")
target_link_libraries(yolo8_det_dnn2 ${PROJECT_NAME})

add_executable(yolo8_det_dnn3 "yolo8_det_dnn3.cpp")
target_link_libraries(yolo8_det_dnn3 ${PROJECT_NAME})

add_executable(yolo8_det_ort "yolo8_det_ort.cpp")
target_link_libraries(yolo8_det_ort ${PROJECT_NAME})

add_executable(yolo8_det_rkn "yolo8_det_rkn.cpp")
target_link_libraries(yolo8_det_rkn ${PROJECT_NAME})

add_executable(yolo8_obb_dnn "yolo8_obb_dnn.cpp")
target_link_libraries(yolo8_obb_dnn ${PROJECT_NAME})

add_executable(yolo8_obb_ort "yolo8_obb_ort.cpp")
target_link_libraries(yolo8_obb_ort ${PROJECT_NAME})

add_executable(yolo8_pose_dnn "yolo8_pose_dnn.cpp")
target_link_libraries(yolo8_pose_dnn ${PROJECT_NAME})

add_executable(yolo8_seg_dnn "yolo8_seg_dnn.cpp")
target_link_libraries(yolo8_seg_dnn ${PROJECT_NAME})

add_executable(yolo8_seg_dnn2 "yolo8_seg_dnn2.cpp")
target_link_libraries(yolo8_seg_dnn2 ${PROJECT_NAME})

add_executable(yolo11_cls_dnn "yolo11_cls_dnn.cpp")
target_link_libraries(yolo11_cls_dnn ${PROJECT_NAME})

add_executable(yolo11_cls_dnn2 "yolo11_cls_dnn2.cpp")
target_link_libraries(yolo11_cls_dnn2 ${PROJECT_NAME})

add_executable(yolo11_det_dnn "yolo11_det_dnn.cpp")
target_link_libraries(yolo11_det_dnn ${PROJECT_NAME})

add_executable(yolo11_det_trt "yolo11_det_trt.cpp")
target_link_libraries(yolo11_det_trt ${PROJECT_NAME})

add_executable(yolo11_det_rkn "yolo11_det_rkn.cpp")
target_link_libraries(yolo11_det_rkn ${PROJECT_NAME})

add_executable(yolo11_obb_dnn "yolo11_obb_dnn.cpp")
target_link_libraries(yolo11_obb_dnn ${PROJECT_NAME})

add_executable(yolo11_obb_dnn2 "yolo11_obb_dnn2.cpp")
target_link_libraries(yolo11_obb_dnn2 ${PROJECT_NAME})

add_executable(yolo11_pose_ort "yolo11_pose_ort.cpp")
target_link_libraries(yolo11_pose_ort ${PROJECT_NAME})

add_executable(yolo11_pose_ovn "yolo11_pose_ovn.cpp")
target_link_libraries(yolo11_pose_ovn ${PROJECT_NAME})

add_executable(yolo11_seg_dnn "yolo11_seg_dnn.cpp")
target_link_libraries(yolo11_seg_dnn ${PROJECT_NAME})

add_executable(yolo11_seg_trt "yolo11_seg_trt.cpp")
target_link_libraries(yolo11_seg_trt ${PROJECT_NAME})

add_executable(yolo26_cls_ort "yolo26_cls_ort.cpp")
target_link_libraries(yolo26_cls_ort ${PROJECT_NAME})

add_executable(yolo26_det_ort "yolo26_det_ort.cpp")
target_link_libraries(yolo26_det_ort ${PROJECT_NAME})

add_executable(yolo26_det_ovn "yolo26_det_ovn.cpp")
target_link_libraries(yolo26_det_ovn ${PROJECT_NAME})

add_executable(yolo26_obb_ovn "yolo26_obb_ovn.cpp")
target_link_libraries(yolo26_obb_ovn ${PROJECT_NAME})

add_executable(yolo26_pose_ort "yolo26_pose_ort.cpp")
target_link_libraries(yolo26_pose_ort ${PROJECT_NAME})

add_executable(yolo26_seg_ort "yolo26_seg_ort.cpp")
target_link_libraries(yolo26_seg_ort ${PROJECT_NAME})

add_executable(yolo26_seg_ovn "yolo26_seg_ovn.cpp")
target_link_libraries(yolo26_seg_ovn ${PROJECT_NAME})

add_executable(yolo26_seg_rkn "yolo26_seg_rkn.cpp")
target_link_libraries(yolo26_seg_rkn ${PROJECT_NAME})